--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -215,8 +215,9 @@
             </div>
         </div>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-storage.js"></script>
     <script src="src/controller/DropBoxController.js"></script>
     <script src="src/index.js"></script>
 </body>
